# synapse

./: .gitignore  CHANGELOG.md  CIRCUIT_BREAKER_INTEGRATION_COMPLETE.md  CIRCUIT_BREAKER_INTEGRATION_STATUS.md  CLEANUP_COMPLETE.md  CLEANUP_GUIDE.md  CLEANUP_PLAN.md  CLEANUP_SUCCESS.md  COMPLETED_PRODUCTION_TASKS.md  Cargo-wasm.toml  Cargo.toml  DASHMAP_MIGRATION_COMPLETE.md  Dockerfile  EMAIL_PERFORMANCE_ANALYSIS.md  EMAIL_SERVER_IMPLEMENTATION_COMPLETE.md  ENHANCED_LLM_INTEGRATION_STATUS.md  FINAL_PRODUCTION_READINESS_REPORT.md  FINAL_PRODUCTION_READY_STATUS.md  FINAL_PROJECT_STATE_BEFORE_RENAME.md  FINAL_STATUS_REPORT.md  HASHMAP_TO_DASHMAP_MIGRATION_COMPLETE.md  LICENSE-APACHE  LLM_INTEGRATION_COMPLETE.md  MULTI_TRANSPORT_STATUS.md  NETWORK_CONNECTIVITY.md  PRODUCTION_PROGRESS_UPDATE.md  PRODUCTION_READINESS_CHECKLIST.md  PRODUCTION_READINESS_REPORT.md  PRODUCTION_READY_CONFIRMATION.md  PRODUCTION_READY_STATUS.md  PROJECT_STATUS_SNAPSHOT.md  PROJECT_STATUS_UPDATE.md  README.md  RELEASE_ANNOUNCEMENT.md  TODO_COMPLETION_SUMMARY.md  TRANSPORT_ABSTRACTION_COMPLETE.md  TRANSPORT_STATUS.md  UNIFIED_TRANSPORT_IMPLEMENTATION_COMPLETE.md  WASM_IMPLEMENTATION_COMPLETE.md  WASM_README.md  (+5 more)
.github/workflows/: ci_cd.yml
config/: example.toml
docs/: ADVANCED_MONITORING.md  API_REFERENCE.md  BLOCKCHAIN_TRUST_SYSTEM.md  CIRCUIT_BREAKER_SYSTEM.md  CONFIGURATION_GUIDE.md  DEPLOYMENT_GUIDE.md  DEVELOPER_GUIDE.md  DOCUMENTATION_SUMMARY.md  EMRP_PARTICIPANT_REGISTRY_PLAN.md  ENHANCED_IDENTITY_RESOLUTION.md  ENHANCED_IDENTITY_RESOLUTION_COMPLETE.md  IDENTITY_RESOLUTION_COMPLETE_GUIDE.md  IDENTITY_RESOLUTION_TROUBLESHOOTING.md  LLM_DISCOVERY_GUIDE.md  NEW_FEATURES.md  OAUTH_AUTHENTICATION.md  REGISTRY_COMPREHENSIVE_DESIGN.md  REGISTRY_IMPLEMENTATION_PLAN.md  REGISTRY_ORGANIZATION_DESIGN.md  SYNAPSE_COMPLETE_ARCHITECTURE.md  SYNAPSE_IMPLEMENTATION_PLAN.md  SYNAPSE_README.md  SYNAPSE_STATUS_REPORT.md  TROUBLESHOOTING.md  UNKNOWN_NAME_HANDLING_COOKBOOK.md
examples/: README.md  README_WORKING.md  WORKING_EXAMPLES_GUIDE.md  ai_assistant_network.rs  ai_assistant_stub.rs  basic_chat.rs  basic_chat_fixed.rs  basic_unified_transport_test.rs  circuit_breaker_demo.rs  comprehensive_test.rs  connectivity_demo_fixed.rs  email_integration_test.rs  email_server_demo.rs  enhanced_router_demo.rs  enterprise_service_mesh.rs  federated_auth_demo.rs  hello_world.rs  http_transport_demo.rs  llm_discovery_demo.rs  multi_modal_collaboration.rs  multi_transport_circuit_breaker_demo.rs  multi_transport_demo.rs  production_readiness_test.rs  simple_unknown_name_resolution.rs  simple_working_demo.rs  synapse_ai_network.rs  tool_interaction.rs  tool_interaction_fixed.rs  unified_transport_demo.rs  unified_transport_test.rs  working_basic_chat.rs
identity_resolver/smart-identity-resolver/src/: cache.rs
migrations/: 001_create_synapse_schema.sql
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: synapse-overview.json
security/: TRUST_SYSTEM_SECURITY_AUDIT.md
src/: auth_integration.rs  circuit_breaker.rs  config.rs  connectivity.rs  crypto.rs  email.rs  error.rs  identity.rs  lib.rs  monitoring.rs  router.rs  router_enhanced.rs  streaming.rs  types.rs
src/email_server/: auth.rs  connectivity.rs  imap_server.rs  mod.rs  smtp_server.rs
src/synapse/: mod.rs
src/synapse/api/: discovery_api.rs  errors.rs  mod.rs  participant_api.rs  trust_api.rs
src/synapse/auth/: README.md  api.rs  example.rs  middleware.rs  mod.rs  trust_bridge.rs  utils.rs
src/synapse/blockchain/: block.rs  consensus.rs  mod.rs  serialization.rs  staking.rs  staking_new.rs  verification.rs
src/synapse/models/: mod.rs  participant.rs  trust.rs
src/synapse/services/: discovery.rs  mod.rs  privacy_manager.rs  registry.rs  registry.rs.bak2  registry.rs.fixed  trust_manager.rs
src/synapse/storage/: cache.rs  database.rs  migrations.rs  mod.rs
src/synapse/telemetry/: error_reporting.rs  mod.rs
src/synapse/transport/: error_recovery.rs  mod.rs
src/transport/: abstraction.rs  discovery.rs  discovery_test.rs  email_enhanced.rs  email_unified.rs  http_unified.rs  llm_discovery.rs  manager.rs  mdns.rs  mdns_enhanced.rs  mdns_unified.rs  mod.rs  nat_traversal.rs  providers.rs  providers_test.rs  quic.rs  quic_unified.rs  router.rs  tcp.rs  tcp_enhanced.rs  tcp_simple.rs  tcp_unified.rs  udp.rs  udp_unified.rs  websocket.rs  websocket_unified.rs
src/wasm/: browser.rs  crypto.rs  mod.rs  simple.rs  storage.rs  webrtc.rs  websocket.rs  worker.rs
tests/: basic_integration_test.rs  blockchain_integration_test.rs  browser_compatibility_test.rs  comprehensive_feature_test.rs  concurrent_registry_access_test.rs  edge_case_test.rs  end_to_end_integration_test.rs  high_load_test.rs  integration_test.rs  multi_transport_integration.rs  network_partition_test.rs  registry_integration_test.rs  security_test.rs  transport_error_handling_test.rs  trust_system_integration_test.rs  webrtc_transport_integration_test.rs
